# PegSolitaire

./: .gitignore  README.md  board_class.py  button_class.py  create_surface.py  dialog_window_class.py  graphics.py  layouts.py  main.py  pyproject.toml  sounds.py  toggle_class.py  ui_elements.py
src/pegsolitaire/: __main__.py  asset_loader.py  board_class.py  board_tiles_class.py  button_class.py  dialog_window_class.py  graphics.py  languages.py  options.py  sounds.py  toggle_class.py  ui_elements.py
src/pegsolitaire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
